# AI_secretary_robot

./: .gitignore  AGENTS.md  Makefile  PROJECT_STATE.md  README.md  RECOVERY_README.md  codex_prompts.md  command.md  docker-compose.yml  docker-entrypoint.sh  main_ai_brain.py  plan.md  requirements.sh  setup_llama_cpp_jetson.sh  watch_urdf.sh
.codex/: config.toml
MD/: imu_driver_guide.md  imu_끊김분석.txt  규칙기반_vs_로컬LLM_비교.txt
src/ai/intent_router_cpp/: package.xml
src/ai/intent_router_cpp/config/: params.yaml  robot_command_templates.txt
src/ai/intent_router_cpp/launch/: voice_pipeline_with_router.launch.py
src/ai/intent_router_cpp/scripts/: similarity_worker.py
src/ai/intent_router_cpp/src/: intent_router_node.cpp
src/ai/stt_cpp/: CMakeLists.txt  README.md  package.xml
src/ai/stt_cpp/config/: params.yaml
src/ai/stt_cpp/include/onnxruntime/core/session/: onnxruntime_cxx_api.h
src/ai/stt_cpp/include/stt_cpp/: moonshine_onnx.hpp  stt_engine.hpp  stt_node.hpp
src/ai/stt_cpp/launch/: stt.launch.py
src/ai/stt_cpp/scripts/: moonshine_stt.py
src/ai/stt_cpp/src/: moonshine_onnx.cpp  stt_engine.cpp  stt_node.cpp
src/ai/tts_cpp/: CMakeLists.txt  README.md  package.xml
src/ai/tts_cpp/config/: params.yaml
src/ai/tts_cpp/include/tts_cpp/: alsa_player.hpp  piper_onnx.hpp  tts_engine.hpp  tts_node.hpp
src/ai/tts_cpp/launch/: voice_pipeline_dual_mode.launch.py  voice_pipeline_local.launch.py  voice_pipeline_with_tts.launch.py
src/ai/tts_cpp/scripts/: edge_tts_synth.py  melo_tts_file_fallback.py
src/ai/tts_cpp/src/: alsa_player.cpp  piper_onnx.cpp  tts_engine.cpp  tts_node.cpp
src/ai/wake_vad_cpp/: CMakeLists.txt
src/ai/wake_vad_cpp/config/: params.yaml
src/ai/wake_vad_cpp/include/wake_vad_cpp/: audio_input.hpp  porcupine_engine.hpp  wake_vad_node.hpp  wav_writer.hpp
src/ai/wake_vad_cpp/src/: audio_input.cpp  vad_engine.cpp  wake_vad_node.cpp
src/battery_cpp/: package.xml
src/bringup/host_bringup/: CMakeLists.txt  README.md  package.xml
src/bringup/host_bringup/launch/: host_bringup_main.launch.py
src/bringup/host_bringup/scripts/: host_system_monitor.py  start_host.sh
src/control/jetrover_arm_moveit/: CMakeLists.txt  README.md
src/control/jetrover_arm_moveit/config/: chomp_planning.yaml  jetrover_arm.srdf  kinematics.yaml  moveit_default.rviz
src/control/jetrover_arm_moveit/jetrover_arm_moveit/: capture_servo_centers.py
src/control/jetrover_arm_moveit/launch/: moveit_demo.launch.py
src/control/jetrover_arm_moveit/scripts/: arm_servo_state_bridge.py  capture_servo_centers.py
src/control/jetrover_arm_moveit/urdf/: car_acker.urdf.xacro  car_mecanum.urdf.xacro  car_tank.urdf.xacro  gripper.urdf.xacro  imu.urdf.xacro
src/control/ros_robot_controller_cpp/: CMakeLists.txt
src/control/ros_robot_controller_cpp/launch/: ros_robot_controller_cpp.launch.py
src/control/ros_robot_controller_cpp/src/: board.cpp  board.hpp  ros_robot_controller_cpp_node.cpp
src/control/ros_robot_controller_msgs/: CMakeLists.txt
src/control/rover_autonomy_cpp/: CMakeLists.txt
src/control/rover_autonomy_cpp/launch/: keyboard_motor.launch.py
src/control/rover_autonomy_cpp/src/: keyboard_motor_node.cpp
src/depth_camera_cpp/: package.xml
src/depth_camera_cpp/launch/: dabai_dcw_usb2.launch.py
src/hardware/battery_cpp/: CMakeLists.txt
src/hardware/battery_cpp/config/: params.yaml
src/hardware/battery_cpp/launch/: battery.launch.py
src/hardware/battery_cpp/src/: battery_node.cpp
src/hardware/depth_camera_cpp/: CMakeLists.txt
src/hardware/depth_camera_cpp/src/: depth_camera_monitor.cpp
src/hardware/imu_bridge_cpp/: CMakeLists.txt
src/hardware/imu_bridge_cpp/launch/: imu_bridge.launch.py
src/hardware/imu_bridge_cpp/src/: imu_bridge_node.cpp
src/hardware/wheel_encoder_cpp/: CMakeLists.txt  package.xml
src/hardware/wheel_encoder_cpp/config/: params.yaml
src/hardware/wheel_encoder_cpp/launch/: wheel_encoder.launch.py
src/hardware/wheel_encoder_cpp/src/: wheel_encoder_node.cpp
src/imu_bridge_cpp/: package.xml
src/intent_router_cpp/: CMakeLists.txt  README.md
src/intent_router_cpp/include/intent_router_cpp/: intent_router_node.hpp
src/intent_router_cpp/launch/: intent_router.launch.py
src/jetrover_arm_moveit/: README.md  package.xml  setup.cfg  setup.py
src/jetrover_arm_moveit/config/: joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  servo_calibration.yaml
src/jetrover_arm_moveit/jetrover_arm_moveit/: arm_moveit_commander.py
src/jetrover_arm_moveit/scripts/: arm_moveit_commander.py  follow_joint_trajectory_bridge.py
src/jetrover_arm_moveit/src/: intent_arm_bridge_node.cpp
src/jetrover_arm_moveit/urdf/: arm.urdf.xacro  common.urdf.xacro  depth_camera.urdf.xacro  jetrover.xacro  lidar.urdf.xacro
src/llm_cpp/: CMakeLists.txt  package.xml
src/llm_cpp/config/: params.yaml
src/llm_cpp/include/llm_cpp/: llm_engine.hpp
src/llm_cpp/launch/: voice_pipeline_with_llm.launch.py
src/llm_cpp/src/: llm_node.cpp
src/navigation/nav2_config/: CMakeLists.txt  package.xml
src/navigation/nav2_config/launch/: nav2_bringup.launch.py
src/navigation/nav2_config/maps/: default_map.pgm  default_map.yaml
src/navigation/nav2_config/params/: nav2_params.yaml
src/robotic-arm-ui/ros2_ws/src/jetrover_web_bridge/: package.xml
src/robotic-arm-ui/ros2_ws/src/jetrover_web_bridge/src/: udp_servo_bridge_node.cpp
src/ros_robot_controller_cpp/: package.xml
src/ros_robot_controller_cpp/src/: ros_robot_controller_cpp_node.cpp
src/rover_autonomy_cpp/: package.xml
src/rover_autonomy_cpp/launch/: keyboard_motor.launch.py
src/ui/robotic-arm-ui/ros2_ws/src/jetrover_web_bridge/: CMakeLists.txt
src/wake_vad_cpp/: MIGRATION_TODO.md  README.md  SDK  package.xml
src/wake_vad_cpp/config/: params.yaml
src/wake_vad_cpp/include/wake_vad_cpp/: audio_input.hpp  state_machine.hpp  vad_engine.hpp
src/wake_vad_cpp/launch/: wake_vad.launch.py
src/wake_vad_cpp/src/: audio_input.cpp  porcupine_engine.cpp  state_machine.cpp  wake_vad_node.cpp  wav_writer.cpp
src/wake_vad_cpp/wake_sound/: 토리야_ko_raspberry-pi_v4_0_0.ppn
(+166 files in other folders)
