<?xml version="1.0"?>
<package format="3">
  <name>battery_cpp</name>
  <version>0.0.1</version>
  <description>Battery telemetry reader node for ros_robot_controller battery topic.</description>

  <maintainer email="ubuntu@example.com">ubuntu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
