<?xml version="1.0"?>
<package format="3">
  <name>imu_bridge_cpp</name>
  <version>0.0.1</version>
  <description>ROS2 C++ IMU bridge/monitor for JetRover</description>
  <maintainer email="ubuntu@example.com">ubuntu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
