<?xml version="1.0"?>
<package format="3">
  <name>jetrover_arm_moveit</name>
  <version>0.1.0</version>
  <description>MoveIt2 integration package for JetRover arm (TRAC-IK + RViz + Cartesian target script).</description>
  <maintainer email="ubuntu@example.com">ubuntu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>ros_robot_controller_msgs</exec_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_setup_assistant</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>

  <exec_depend>trac_ik_kinematics_plugin</exec_depend>

  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-tf-transformations</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
