<?xml version="1.0"?>
<package format="3">
  <name>rover_autonomy_cpp</name>
  <version>0.0.1</version>
  <description>Keyboard-based wheel motor teleop publisher for ros_robot_controller</description>
  <maintainer email="ubuntu@example.com">ubuntu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>ros_robot_controller_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
