<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stt_cpp</name>
  <version>0.0.1</version>
  <description>STT ROS2 C++ node (Groq Whisper primary + faster-whisper fallback)</description>
  <maintainer email="hinoonyaso@gmail.com">ubuntu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>libcurl4-openssl-dev</depend>
  <depend>libsndfile1-dev</depend>
  <depend>rclcpp</depend>
  <depend>ros_robot_controller_msgs</depend>
  <depend>rover_common</depend>
  <depend>sherpa-onnx</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
