<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>host_bringup</name>
  <version>0.1.0</version>
  <description>Unified host bringup package for JetRover.</description>
  <maintainer email="ubuntu@example.com">ubuntu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <exec_depend>ros_robot_controller_cpp</exec_depend>
  <exec_depend>imu_bridge_cpp</exec_depend>
  <exec_depend>battery_cpp</exec_depend>
  <exec_depend>depth_camera_cpp</exec_depend>
  <exec_depend>lidar_cpp</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>slam_config</exec_depend>
  <exec_depend>nav2_config</exec_depend>
  <exec_depend>jetrover_arm_moveit</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
