cmake_minimum_required(VERSION 3.10)
project(imu_bridge_cpp)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(sensor_msgs REQUIRED)

add_executable(imu_bridge_node src/imu_bridge_node.cpp)
ament_target_dependencies(imu_bridge_node rclcpp sensor_msgs)

target_compile_features(imu_bridge_node PUBLIC cxx_std_17)

install(TARGETS
  imu_bridge_node
  DESTINATION lib/${PROJECT_NAME}
)

install(FILES
  launch/imu_bridge.launch.py
  DESTINATION share/${PROJECT_NAME}/launch
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
