<?xml version="1.0"?>
<package format="3">
  <name>jetrover_web_bridge</name>
  <version>0.1.0</version>
  <description>UDP bridge for web UI servo commands to ROS2 topics.</description>

  <maintainer email="sang@example.com">sang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ros_robot_controller_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
